[package]
name = "rust_exercise"
version = "0.1.0"
authors = ["clemado1 <clemado1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.4.0"
gui = {path = "./gui" }
blog = {path = "./blog" }

[workspace]

members = [
    "gui", "leetcode", "d1_filework", "d2_iterators", "d3_lifetimes"
]