[package]
name = "d3_lifetimes"
version = "0.1.0"
authors = ["clemado1 <clemado1@gmail.com>"]
edition = "2018"

[[bin]]
name="d1_lifetime"
path="src/main.rs"

[[bin]]
name="d2_closure"
path="src/v2_closure.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
